publish: Fixed typo and removed bad brackets
generated from commit 650e3fc5f57e05d774894ba16527d696e10764b7

--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@ returned in the body.</p>
 
 <p><code class="prettyprint">GET https://api.connctd.io/api/v1/auth/logout</code></p>
 
-          <h1 id="oauth2">OAuth2</h1>
+          <h1 id="oauth-2-0">OAuth 2.0</h1>
 
 <p>The connctd platform acts as a oauth2 provider implementing all flows described in https://tools.ietf.org/html/rfc6749#section-4 except the &ldquo;Resource Owner Password Credentials Grant&rdquo;. The following two sections only give examples based on the Authorization Code Grant Flow as there already exist hundreds of good oauth2 tutorials which can be read in case you need another flow.</p>
 
@@ -434,7 +434,7 @@ Please note that for every request a valid access token is required and needs to
 <p>Removes a tag</p>
 
 <blockquote>
-<p><strong>Request:</strong> <em>Method:</em> DELETE <em>Url:</em> https://api.connctd.io/api/v1/apps/1bd2f1a3-e72d-4606-b82b-86d1054f3bd4/tags/<TagName></p>
+<p><strong>Request:</strong> <em>Method:</em> DELETE <em>Url:</em> https://api.connctd.io/api/v1/apps/1bd2f1a3-e72d-4606-b82b-86d1054f3bd4/tags/TAGNAME</p>
 </blockquote>
 <pre class="highlight json tab-json"><code></code></pre>
 <blockquote>
